compilador-fase-semantico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CADENA_ERROR
    COMA
    ERROR_LEXICO
    ID_CON_ERROR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_sentencias
Rule 2     lista_sentencias -> lista_sentencias sentencia
Rule 3     lista_sentencias -> sentencia
Rule 4     sentencia -> declaracion
Rule 5     sentencia -> asignacion
Rule 6     sentencia -> mostrar_stmt
Rule 7     sentencia -> leer_stmt
Rule 8     sentencia -> si_stmt
Rule 9     sentencia -> mientras_stmt
Rule 10    declaracion -> tipo ID ASIGNAR expr PUNTOCOM
Rule 11    tipo -> ENTERO
Rule 12    tipo -> CADENA_TIPO
Rule 13    tipo -> LOGICO_TIPO
Rule 14    asignacion -> ID ASIGNAR expr PUNTOCOM
Rule 15    mostrar_stmt -> MOSTRAR PAR_IZQ expr PAR_DER PUNTOCOM
Rule 16    leer_stmt -> LEER PAR_IZQ ID PAR_DER PUNTOCOM
Rule 17    si_stmt -> SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
Rule 18    si_stmt -> SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
Rule 19    mientras_stmt -> MIENTRAS PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
Rule 20    expr -> expr O expr_y
Rule 21    expr -> expr_y
Rule 22    expr_y -> expr_y Y expr_no
Rule 23    expr_y -> expr_no
Rule 24    expr_no -> NO expr_no
Rule 25    expr_no -> expr_rel
Rule 26    expr_rel -> expr_arit MAYOR expr_arit
Rule 27    expr_rel -> expr_arit MENOR expr_arit
Rule 28    expr_rel -> expr_arit MAYOR_IG expr_arit
Rule 29    expr_rel -> expr_arit MENOR_IG expr_arit
Rule 30    expr_rel -> expr_arit IGUAL expr_arit
Rule 31    expr_rel -> expr_arit DISTINTO expr_arit
Rule 32    expr_rel -> expr_arit
Rule 33    expr_arit -> expr_arit MAS termino
Rule 34    expr_arit -> expr_arit MENOS termino
Rule 35    expr_arit -> termino
Rule 36    termino -> termino POR factor
Rule 37    termino -> termino ENTRE factor
Rule 38    termino -> factor
Rule 39    factor -> NUMERO
Rule 40    factor -> LITERAL_CADENA
Rule 41    factor -> VERDADERO
Rule 42    factor -> FALSO
Rule 43    factor -> ID
Rule 44    factor -> PAR_IZQ expr PAR_DER
Rule 45    factor -> MENOS factor

Terminals, with rules where they appear

ASIGNAR              : 10 14
CADENA_ERROR         : 
CADENA_TIPO          : 12
COMA                 : 
DISTINTO             : 31
ENTERO               : 11
ENTRE                : 37
ERROR_LEXICO         : 
FALSO                : 42
ID                   : 10 14 16 43
ID_CON_ERROR         : 
IGUAL                : 30
LEER                 : 16
LITERAL_CADENA       : 40
LLA_DER              : 17 17 18 19
LLA_IZQ              : 17 17 18 19
LOGICO_TIPO          : 13
MAS                  : 33
MAYOR                : 26
MAYOR_IG             : 28
MENOR                : 27
MENOR_IG             : 29
MENOS                : 34 45
MIENTRAS             : 19
MOSTRAR              : 15
NO                   : 24
NUMERO               : 39
O                    : 20
PAR_DER              : 15 16 17 18 19 44
PAR_IZQ              : 15 16 17 18 19 44
POR                  : 36
PUNTOCOM             : 10 14 15 16
SI                   : 17 18
SINO                 : 17
VERDADERO            : 41
Y                    : 22
error                : 

Nonterminals, with rules where they appear

asignacion           : 5
declaracion          : 4
expr                 : 10 14 15 17 18 19 20 44
expr_arit            : 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34
expr_no              : 22 23 24
expr_rel             : 25
expr_y               : 20 21 22
factor               : 36 37 38 45
leer_stmt            : 7
lista_sentencias     : 1 2 17 17 18 19
mientras_stmt        : 9
mostrar_stmt         : 6
programa             : 0
sentencia            : 2 3
si_stmt              : 8
termino              : 33 34 35 36 37
tipo                 : 10

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_sentencias
    (2) lista_sentencias -> . lista_sentencias sentencia
    (3) lista_sentencias -> . sentencia
    (4) sentencia -> . declaracion
    (5) sentencia -> . asignacion
    (6) sentencia -> . mostrar_stmt
    (7) sentencia -> . leer_stmt
    (8) sentencia -> . si_stmt
    (9) sentencia -> . mientras_stmt
    (10) declaracion -> . tipo ID ASIGNAR expr PUNTOCOM
    (14) asignacion -> . ID ASIGNAR expr PUNTOCOM
    (15) mostrar_stmt -> . MOSTRAR PAR_IZQ expr PAR_DER PUNTOCOM
    (16) leer_stmt -> . LEER PAR_IZQ ID PAR_DER PUNTOCOM
    (17) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (18) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (19) mientras_stmt -> . MIENTRAS PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (11) tipo -> . ENTERO
    (12) tipo -> . CADENA_TIPO
    (13) tipo -> . LOGICO_TIPO

    ID              shift and go to state 11
    MOSTRAR         shift and go to state 12
    LEER            shift and go to state 13
    SI              shift and go to state 14
    MIENTRAS        shift and go to state 15
    ENTERO          shift and go to state 16
    CADENA_TIPO     shift and go to state 17
    LOGICO_TIPO     shift and go to state 18

    programa                       shift and go to state 1
    lista_sentencias               shift and go to state 2
    sentencia                      shift and go to state 3
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    mostrar_stmt                   shift and go to state 6
    leer_stmt                      shift and go to state 7
    si_stmt                        shift and go to state 8
    mientras_stmt                  shift and go to state 9
    tipo                           shift and go to state 10

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_sentencias .
    (2) lista_sentencias -> lista_sentencias . sentencia
    (4) sentencia -> . declaracion
    (5) sentencia -> . asignacion
    (6) sentencia -> . mostrar_stmt
    (7) sentencia -> . leer_stmt
    (8) sentencia -> . si_stmt
    (9) sentencia -> . mientras_stmt
    (10) declaracion -> . tipo ID ASIGNAR expr PUNTOCOM
    (14) asignacion -> . ID ASIGNAR expr PUNTOCOM
    (15) mostrar_stmt -> . MOSTRAR PAR_IZQ expr PAR_DER PUNTOCOM
    (16) leer_stmt -> . LEER PAR_IZQ ID PAR_DER PUNTOCOM
    (17) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (18) si_stmt -> . SI PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (19) mientras_stmt -> . MIENTRAS PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (11) tipo -> . ENTERO
    (12) tipo -> . CADENA_TIPO
    (13) tipo -> . LOGICO_TIPO

    $end            reduce using rule 1 (programa -> lista_sentencias .)
    ID              shift and go to state 11
    MOSTRAR         shift and go to state 12
    LEER            shift and go to state 13
    SI              shift and go to state 14
    MIENTRAS        shift and go to state 15
    ENTERO          shift and go to state 16
    CADENA_TIPO     shift and go to state 17
    LOGICO_TIPO     shift and go to state 18

    sentencia                      shift and go to state 19
    declaracion                    shift and go to state 4
    asignacion                     shift and go to state 5
    mostrar_stmt                   shift and go to state 6
    leer_stmt                      shift and go to state 7
    si_stmt                        shift and go to state 8
    mientras_stmt                  shift and go to state 9
    tipo                           shift and go to state 10

state 3

    (3) lista_sentencias -> sentencia .

    ID              reduce using rule 3 (lista_sentencias -> sentencia .)
    MOSTRAR         reduce using rule 3 (lista_sentencias -> sentencia .)
    LEER            reduce using rule 3 (lista_sentencias -> sentencia .)
    SI              reduce using rule 3 (lista_sentencias -> sentencia .)
    MIENTRAS        reduce using rule 3 (lista_sentencias -> sentencia .)
    ENTERO          reduce using rule 3 (lista_sentencias -> sentencia .)
    CADENA_TIPO     reduce using rule 3 (lista_sentencias -> sentencia .)
    LOGICO_TIPO     reduce using rule 3 (lista_sentencias -> sentencia .)
    $end            reduce using rule 3 (lista_sentencias -> sentencia .)
    LLA_DER         reduce using rule 3 (lista_sentencias -> sentencia .)


state 4

    (4) sentencia -> declaracion .

    ID              reduce using rule 4 (sentencia -> declaracion .)
    MOSTRAR         reduce using rule 4 (sentencia -> declaracion .)
    LEER            reduce using rule 4 (sentencia -> declaracion .)
    SI              reduce using rule 4 (sentencia -> declaracion .)
    MIENTRAS        reduce using rule 4 (sentencia -> declaracion .)
    ENTERO          reduce using rule 4 (sentencia -> declaracion .)
    CADENA_TIPO     reduce using rule 4 (sentencia -> declaracion .)
    LOGICO_TIPO     reduce using rule 4 (sentencia -> declaracion .)
    $end            reduce using rule 4 (sentencia -> declaracion .)
    LLA_DER         reduce using rule 4 (sentencia -> declaracion .)


state 5

    (5) sentencia -> asignacion .

    ID              reduce using rule 5 (sentencia -> asignacion .)
    MOSTRAR         reduce using rule 5 (sentencia -> asignacion .)
    LEER            reduce using rule 5 (sentencia -> asignacion .)
    SI              reduce using rule 5 (sentencia -> asignacion .)
    MIENTRAS        reduce using rule 5 (sentencia -> asignacion .)
    ENTERO          reduce using rule 5 (sentencia -> asignacion .)
    CADENA_TIPO     reduce using rule 5 (sentencia -> asignacion .)
    LOGICO_TIPO     reduce using rule 5 (sentencia -> asignacion .)
    $end            reduce using rule 5 (sentencia -> asignacion .)
    LLA_DER         reduce using rule 5 (sentencia -> asignacion .)


state 6

    (6) sentencia -> mostrar_stmt .

    ID              reduce using rule 6 (sentencia -> mostrar_stmt .)
    MOSTRAR         reduce using rule 6 (sentencia -> mostrar_stmt .)
    LEER            reduce using rule 6 (sentencia -> mostrar_stmt .)
    SI              reduce using rule 6 (sentencia -> mostrar_stmt .)
    MIENTRAS        reduce using rule 6 (sentencia -> mostrar_stmt .)
    ENTERO          reduce using rule 6 (sentencia -> mostrar_stmt .)
    CADENA_TIPO     reduce using rule 6 (sentencia -> mostrar_stmt .)
    LOGICO_TIPO     reduce using rule 6 (sentencia -> mostrar_stmt .)
    $end            reduce using rule 6 (sentencia -> mostrar_stmt .)
    LLA_DER         reduce using rule 6 (sentencia -> mostrar_stmt .)


state 7

    (7) sentencia -> leer_stmt .

    ID              reduce using rule 7 (sentencia -> leer_stmt .)
    MOSTRAR         reduce using rule 7 (sentencia -> leer_stmt .)
    LEER            reduce using rule 7 (sentencia -> leer_stmt .)
    SI              reduce using rule 7 (sentencia -> leer_stmt .)
    MIENTRAS        reduce using rule 7 (sentencia -> leer_stmt .)
    ENTERO          reduce using rule 7 (sentencia -> leer_stmt .)
    CADENA_TIPO     reduce using rule 7 (sentencia -> leer_stmt .)
    LOGICO_TIPO     reduce using rule 7 (sentencia -> leer_stmt .)
    $end            reduce using rule 7 (sentencia -> leer_stmt .)
    LLA_DER         reduce using rule 7 (sentencia -> leer_stmt .)


state 8

    (8) sentencia -> si_stmt .

    ID              reduce using rule 8 (sentencia -> si_stmt .)
    MOSTRAR         reduce using rule 8 (sentencia -> si_stmt .)
    LEER            reduce using rule 8 (sentencia -> si_stmt .)
    SI              reduce using rule 8 (sentencia -> si_stmt .)
    MIENTRAS        reduce using rule 8 (sentencia -> si_stmt .)
    ENTERO          reduce using rule 8 (sentencia -> si_stmt .)
    CADENA_TIPO     reduce using rule 8 (sentencia -> si_stmt .)
    LOGICO_TIPO     reduce using rule 8 (sentencia -> si_stmt .)
    $end            reduce using rule 8 (sentencia -> si_stmt .)
    LLA_DER         reduce using rule 8 (sentencia -> si_stmt .)


state 9

    (9) sentencia -> mientras_stmt .

    ID              reduce using rule 9 (sentencia -> mientras_stmt .)
    MOSTRAR         reduce using rule 9 (sentencia -> mientras_stmt .)
    LEER            reduce using rule 9 (sentencia -> mientras_stmt .)
    SI              reduce using rule 9 (sentencia -> mientras_stmt .)
    MIENTRAS        reduce using rule 9 (sentencia -> mientras_stmt .)
    ENTERO          reduce using rule 9 (sentencia -> mientras_stmt .)
    CADENA_TIPO     reduce using rule 9 (sentencia -> mientras_stmt .)
    LOGICO_TIPO     reduce using rule 9 (sentencia -> mientras_stmt .)
    $end            reduce using rule 9 (sentencia -> mientras_stmt .)
    LLA_DER         reduce using rule 9 (sentencia -> mientras_stmt .)


state 10

    (10) declaracion -> tipo . ID ASIGNAR expr PUNTOCOM

    ID              shift and go to state 20


state 11

    (14) asignacion -> ID . ASIGNAR expr PUNTOCOM

    ASIGNAR         shift and go to state 21


state 12

    (15) mostrar_stmt -> MOSTRAR . PAR_IZQ expr PAR_DER PUNTOCOM

    PAR_IZQ         shift and go to state 22


state 13

    (16) leer_stmt -> LEER . PAR_IZQ ID PAR_DER PUNTOCOM

    PAR_IZQ         shift and go to state 23


state 14

    (17) si_stmt -> SI . PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (18) si_stmt -> SI . PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER

    PAR_IZQ         shift and go to state 24


state 15

    (19) mientras_stmt -> MIENTRAS . PAR_IZQ expr PAR_DER LLA_IZQ lista_sentencias LLA_DER

    PAR_IZQ         shift and go to state 25


state 16

    (11) tipo -> ENTERO .

    ID              reduce using rule 11 (tipo -> ENTERO .)


state 17

    (12) tipo -> CADENA_TIPO .

    ID              reduce using rule 12 (tipo -> CADENA_TIPO .)


state 18

    (13) tipo -> LOGICO_TIPO .

    ID              reduce using rule 13 (tipo -> LOGICO_TIPO .)


state 19

    (2) lista_sentencias -> lista_sentencias sentencia .

    ID              reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    MOSTRAR         reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LEER            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    SI              reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    MIENTRAS        reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    ENTERO          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    CADENA_TIPO     reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LOGICO_TIPO     reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    $end            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LLA_DER         reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)


state 20

    (10) declaracion -> tipo ID . ASIGNAR expr PUNTOCOM

    ASIGNAR         shift and go to state 26


state 21

    (14) asignacion -> ID ASIGNAR . expr PUNTOCOM
    (20) expr -> . expr O expr_y
    (21) expr -> . expr_y
    (22) expr_y -> . expr_y Y expr_no
    (23) expr_y -> . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 31
    NUMERO          shift and go to state 37
    LITERAL_CADENA  shift and go to state 38
    VERDADERO       shift and go to state 39
    FALSO           shift and go to state 40
    ID              shift and go to state 27
    PAR_IZQ         shift and go to state 41
    MENOS           shift and go to state 35

    expr                           shift and go to state 28
    expr_y                         shift and go to state 29
    expr_no                        shift and go to state 30
    expr_rel                       shift and go to state 32
    expr_arit                      shift and go to state 33
    termino                        shift and go to state 34
    factor                         shift and go to state 36

state 22

    (15) mostrar_stmt -> MOSTRAR PAR_IZQ . expr PAR_DER PUNTOCOM
    (20) expr -> . expr O expr_y
    (21) expr -> . expr_y
    (22) expr_y -> . expr_y Y expr_no
    (23) expr_y -> . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 31
    NUMERO          shift and go to state 37
    LITERAL_CADENA  shift and go to state 38
    VERDADERO       shift and go to state 39
    FALSO           shift and go to state 40
    ID              shift and go to state 27
    PAR_IZQ         shift and go to state 41
    MENOS           shift and go to state 35

    expr                           shift and go to state 42
    expr_y                         shift and go to state 29
    expr_no                        shift and go to state 30
    expr_rel                       shift and go to state 32
    expr_arit                      shift and go to state 33
    termino                        shift and go to state 34
    factor                         shift and go to state 36

state 23

    (16) leer_stmt -> LEER PAR_IZQ . ID PAR_DER PUNTOCOM

    ID              shift and go to state 43


state 24

    (17) si_stmt -> SI PAR_IZQ . expr PAR_DER LLA_IZQ lista_sentencias LLA_DER SINO LLA_IZQ lista_sentencias LLA_DER
    (18) si_stmt -> SI PAR_IZQ . expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (20) expr -> . expr O expr_y
    (21) expr -> . expr_y
    (22) expr_y -> . expr_y Y expr_no
    (23) expr_y -> . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 31
    NUMERO          shift and go to state 37
    LITERAL_CADENA  shift and go to state 38
    VERDADERO       shift and go to state 39
    FALSO           shift and go to state 40
    ID              shift and go to state 27
    PAR_IZQ         shift and go to state 41
    MENOS           shift and go to state 35

    expr                           shift and go to state 44
    expr_y                         shift and go to state 29
    expr_no                        shift and go to state 30
    expr_rel                       shift and go to state 32
    expr_arit                      shift and go to state 33
    termino                        shift and go to state 34
    factor                         shift and go to state 36

state 25

    (19) mientras_stmt -> MIENTRAS PAR_IZQ . expr PAR_DER LLA_IZQ lista_sentencias LLA_DER
    (20) expr -> . expr O expr_y
    (21) expr -> . expr_y
    (22) expr_y -> . expr_y Y expr_no
    (23) expr_y -> . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 31
    NUMERO          shift and go to state 37
    LITERAL_CADENA  shift and go to state 38
    VERDADERO       shift and go to state 39
    FALSO           shift and go to state 40
    ID              shift and go to state 27
    PAR_IZQ         shift and go to state 41
    MENOS           shift and go to state 35

    expr                           shift and go to state 45
    expr_y                         shift and go to state 29
    expr_no                        shift and go to state 30
    expr_rel                       shift and go to state 32
    expr_arit                      shift and go to state 33
    termino                        shift and go to state 34
    factor                         shift and go to state 36

state 26

    (10) declaracion -> tipo ID ASIGNAR . expr PUNTOCOM
    (20) expr -> . expr O expr_y
    (21) expr -> . expr_y
    (22) expr_y -> . expr_y Y expr_no
    (23) expr_y -> . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 31
    NUMERO          shift and go to state 37
    LITERAL_CADENA  shift and go to state 38
    VERDADERO       shift and go to state 39
    FALSO           shift and go to state 40
    ID              shift and go to state 27
    PAR_IZQ         shift and go to state 41
    MENOS           shift and go to state 35

    expr                           shift and go to state 46
    expr_y                         shift and go to state 29
    expr_no                        shift and go to state 30
    expr_rel                       shift and go to state 32
    expr_arit                      shift and go to state 33
    termino                        shift and go to state 34
    factor                         shift and go to state 36

state 27

    (43) factor -> ID .

    POR             reduce using rule 43 (factor -> ID .)
    ENTRE           reduce using rule 43 (factor -> ID .)
    MAYOR           reduce using rule 43 (factor -> ID .)
    MENOR           reduce using rule 43 (factor -> ID .)
    MAYOR_IG        reduce using rule 43 (factor -> ID .)
    MENOR_IG        reduce using rule 43 (factor -> ID .)
    IGUAL           reduce using rule 43 (factor -> ID .)
    DISTINTO        reduce using rule 43 (factor -> ID .)
    MAS             reduce using rule 43 (factor -> ID .)
    MENOS           reduce using rule 43 (factor -> ID .)
    Y               reduce using rule 43 (factor -> ID .)
    PUNTOCOM        reduce using rule 43 (factor -> ID .)
    O               reduce using rule 43 (factor -> ID .)
    PAR_DER         reduce using rule 43 (factor -> ID .)


state 28

    (14) asignacion -> ID ASIGNAR expr . PUNTOCOM
    (20) expr -> expr . O expr_y

    PUNTOCOM        shift and go to state 47
    O               shift and go to state 48


state 29

    (21) expr -> expr_y .
    (22) expr_y -> expr_y . Y expr_no

    PUNTOCOM        reduce using rule 21 (expr -> expr_y .)
    O               reduce using rule 21 (expr -> expr_y .)
    PAR_DER         reduce using rule 21 (expr -> expr_y .)
    Y               shift and go to state 49


state 30

    (23) expr_y -> expr_no .

    Y               reduce using rule 23 (expr_y -> expr_no .)
    PUNTOCOM        reduce using rule 23 (expr_y -> expr_no .)
    O               reduce using rule 23 (expr_y -> expr_no .)
    PAR_DER         reduce using rule 23 (expr_y -> expr_no .)


state 31

    (24) expr_no -> NO . expr_no
    (24) expr_no -> . NO expr_no
    (25) expr_no -> . expr_rel
    (26) expr_rel -> . expr_arit MAYOR expr_arit
    (27) expr_rel -> . expr_arit MENOR expr_arit
    (28) expr_rel -> . expr_arit MAYOR_IG expr_arit
    (29) expr_rel -> . expr_arit MENOR_IG expr_arit
    (30) expr_rel -> . expr_arit IGUAL expr_arit
    (31) expr_rel -> . expr_arit DISTINTO expr_arit
    (32) expr_rel -> . expr_arit
    (33) expr_arit -> . expr_arit MAS termino
    (34) expr_arit -> . expr_arit MENOS termino
    (35) expr_arit -> . termino
    (36) termino -> . termino POR factor
    (37) termino -> . termino ENTRE factor
    (38) termino -> . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NO              shift and go to state 31
    NUMERO          shift and go to state 37
    LITERAL_CADENA  shift and go to state 38
    VERDADERO       shift and go to state 39
    FALSO           shift and go to state 40
    ID              shift and go to state 27
    PAR_IZQ         shift and go to state 41
    MENOS           shift and go to state 35

    expr_no                        shift and go to state 50
    expr_rel                       shift and go to state 32
    expr_arit                      shift and go to state 33
    termino                        shift and go to state 34
    factor                         shift and go to state 36

state 32

    (25) expr_no -> expr_rel .

    Y               reduce using rule 25 (expr_no -> expr_rel .)
    PUNTOCOM        reduce using rule 25 (expr_no -> expr_rel .)
    O               reduce using rule 25 (expr_no -> expr_rel .)
    PAR_DER         reduce using rule 25 (expr_no -> expr_rel .)


state 33

    (26) expr_rel -> expr_arit . MAYOR expr_arit
    (27) expr_rel -> expr_arit . MENOR expr_arit
    (28) expr_rel -> expr_arit . MAYOR_IG expr_arit
    (29) expr_rel -> expr_arit . MENOR_IG expr_arit
    (30) expr_rel -> expr_arit . IGUAL expr_arit
    (31) expr_rel -> expr_arit . DISTINTO expr_arit
    (32) expr_rel -> expr_arit .
    (33) expr_arit -> expr_arit . MAS termino
    (34) expr_arit -> expr_arit . MENOS termino

    MAYOR           shift and go to state 51
    MENOR           shift and go to state 52
    MAYOR_IG        shift and go to state 53
    MENOR_IG        shift and go to state 54
    IGUAL           shift and go to state 55
    DISTINTO        shift and go to state 56
    Y               reduce using rule 32 (expr_rel -> expr_arit .)
    PUNTOCOM        reduce using rule 32 (expr_rel -> expr_arit .)
    O               reduce using rule 32 (expr_rel -> expr_arit .)
    PAR_DER         reduce using rule 32 (expr_rel -> expr_arit .)
    MAS             shift and go to state 57
    MENOS           shift and go to state 58


state 34

    (35) expr_arit -> termino .
    (36) termino -> termino . POR factor
    (37) termino -> termino . ENTRE factor

    MAYOR           reduce using rule 35 (expr_arit -> termino .)
    MENOR           reduce using rule 35 (expr_arit -> termino .)
    MAYOR_IG        reduce using rule 35 (expr_arit -> termino .)
    MENOR_IG        reduce using rule 35 (expr_arit -> termino .)
    IGUAL           reduce using rule 35 (expr_arit -> termino .)
    DISTINTO        reduce using rule 35 (expr_arit -> termino .)
    MAS             reduce using rule 35 (expr_arit -> termino .)
    MENOS           reduce using rule 35 (expr_arit -> termino .)
    Y               reduce using rule 35 (expr_arit -> termino .)
    PUNTOCOM        reduce using rule 35 (expr_arit -> termino .)
    O               reduce using rule 35 (expr_arit -> termino .)
    PAR_DER         reduce using rule 35 (expr_arit -> termino .)
    POR             shift and go to state 59
    ENTRE           shift and go to state 60


state 35

    (45) factor -> MENOS . factor
    (39) factor -> . NUMERO
    (40) factor -> . LITERAL_CADENA
    (41) factor -> . VERDADERO
    (42) factor -> . FALSO
    (43) factor -> . ID
    (44) factor -> . PAR_IZQ expr PAR_DER
    (45) factor -> . MENOS factor

    NUMERO          shift and go to state 37
    LITERAL_CADENA  shift and go to state 38
    VERDADERO       shift and go to state 39
    FALSO           shift and go to state 40
    ID              shift and go to state 27
    PAR_IZQ         shift and go to state 41
    MENOS           shift and go to state 35

    factor                         shift and go to state 61

state 36

    (38) termino -> factor .

    POR             reduce using rule 38 (termino -> factor .)
    ENTRE           reduce using rule 38 (termino -> factor .)
    MAYOR           reduce using rule 38 (termino -> factor .)
    MENOR           reduce using rule 38 (termino -> factor .)
    MAYOR_IG        reduce using rule 38 (termino -> factor .)
    MENOR_IG        reduce using rule 38 (termino -> factor .)
    IGUAL           reduce using rule 38 (termino -> factor .)
    DISTINTO        reduce using rule 38 (termino -> factor .)
    MAS             reduce using rule 38 (termino -> factor .)
    MENOS           reduce using rule 38 (termino -> factor .)
    Y               reduce using rule 38 (termino -> factor .)
    PUNTOCOM        reduce using rule 38 (termino -> factor .)
    O               reduce using rule 38 (termino -> factor .)
    PAR_DER         reduce using rule 38 (termino -> factor .)


state 37

    (39) factor -> NUMERO .

    POR             reduce using rule 39 (factor -> NUMERO .)
    ENTRE           reduce using rule 39 (factor -> NUMERO .)
    MAYOR           reduce using rule 39 (factor -> NUMERO .)
    MENOR           reduce using rule 39 (factor -> NUMERO .)
    MAYOR_IG        reduce using rule 39 (factor -> NUMERO .)
    MENOR_IG        reduce using rule 39 (factor -> NUMERO .)
    IGUAL           reduce using rule 39 (factor -> NUMERO .)
